<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Owner_profile_Activity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/NoDescription"
        app:layout_constraintBottom_toTopOf="@+id/Bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/Ivory" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/Bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/Gunmetal_grey"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/walker_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:layout_marginTop="34dp"
        android:paddingTop="5dp"
        android:text="@string/Email"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walker_profile"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="231dp"
        android:layout_height="27dp"
        android:layout_marginBottom="264dp"
        android:paddingTop="5dp"
        android:text="@string/Name_user"
        android:textColor="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/textView_number"
        android:layout_width="234dp"
        android:layout_height="31dp"
        android:layout_marginBottom="60dp"
        android:paddingTop="5dp"
        android:text="@string/Telephone"
        android:textColor="#616161"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_title" />

    <ImageView
        android:id="@+id/walker_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_profile"
        android:contentDescription="@string/walker" />

    <Button
        android:id="@+id/button_signout"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:background="@color/Gunmetal_grey"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toTopOf="@+id/textView_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/walker_profile"
        app:layout_constraintTop_toTopOf="@+id/walker_profile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:text="@string/Telephone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_number"
        app:layout_constraintEnd_toEndOf="@+id/textView_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_number"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="121dp"
        android:layout_height="27dp"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_title"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/walker_profile"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:text="@string/walker"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView_name"
        app:layout_constraintEnd_toEndOf="@+id/textView_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_number"
        app:layout_constraintVertical_bias="0.245" />

</androidx.constraintlayout.widget.ConstraintLayout>