<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseUser">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:contentDescription="@string/NoDescription"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_choose_owner"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/curved_text"
        android:contentDescription="@string/NoDescription"
        android:foreground="@drawable/ic_owner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_choose_walker"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/curved_text"
        android:contentDescription="@string/NoDescription"
        android:foreground="@drawable/ic_walker"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_choose_owner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:text="@string/owner"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_choose_owner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_choose_owner"
        app:layout_constraintTop_toBottomOf="@+id/button_choose_owner"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/walker"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_choose_walker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_choose_walker"
        app:layout_constraintTop_toBottomOf="@+id/button_choose_walker"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="317dp"
        android:layout_height="58dp"
        android:gravity="center_horizontal"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

</androidx.constraintlayout.widget.ConstraintLayout>